--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,7 @@
     <h2 class="text-3xl font-bold text-center mb-6">Your Cart</h2>
     <ul id="cartList" class="text-black bg-white bg-opacity-90 rounded-lg p-4 max-w-xl mx-auto mb-6 space-y-4"></ul>
     <div class="text-center">
-      <button id="preOrderBtn" class="bg-red-600 hover:bg-red-700 text-white px-6 py-2 rounded-full">Proceed to Pre-Order</button>
+      <button id="preOrderBtn" class="bg-red-600 hover:bg-red-700 text-white px-6 py-2 rounded-full">Proceed to Order</button>
     </div>
   </main>
 
