--- a/preorder.html
+++ b/preorder.html
@@ -64,7 +64,7 @@
           <p id="addressPreview" class="whitespace-pre-line text-sm"></p>
         </div>
 
-        <p class="text-sm text-gray-600 mb-2">Estimated Pickup Date: <span id="pickupDate" class="font-semibold"></span></p>
+        <p class="text-sm text-gray-600 mb-2">Estimated Delivery Date: <span id="pickupDate" class="font-semibold"></span></p>
 
         <button onclick="finishOrder()" class="w-full bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">Complete Order</button>
       </div>
