--- a/preorder.html
+++ b/preorder.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pre-Order - AutoGear Hub</title>
+  <title>Order - AutoGear Hub</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -23,9 +23,9 @@
   </script>
 </head>
 <body class="text-white" id="preorderBody" style="background-size: cover; background-position: center;">
-  <div class="flex justify-center items-center h-screen bg-black bg-opacity-60 px-4">
+  <div class="flex justify-center items-center min-h-screen bg-black bg-opacity-60 px-4">
     <div class="bg-white bg-opacity-90 p-8 rounded-xl w-full max-w-md text-black shadow-lg">
-      <h2 class="text-2xl font-bold mb-6 text-center text-red-600">Enter Your Phone Number</h2>
+      <h2 class="text-2xl font-bold mb-6 text-center text-red-600">Order Your Products</h2>
 
       <!-- Step 1: Phone -->
       <div id="step1">
@@ -37,7 +37,7 @@
         <button onclick="confirmNumber()" class="w-full bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 mt-4">Next</button>
       </div>
 
-      <!-- Step 2: Confirm Number -->
+      <!-- Step 2: Confirm Phone -->
       <div id="confirmStep" class="hidden">
         <p class="mb-4">Is this your phone number?</p>
         <p id="phonePreview" class="font-bold text-lg mb-4 text-center text-red-600"></p>
@@ -58,14 +58,41 @@
         <label class="block font-semibold">Full Address:</label>
         <textarea id="address" class="w-full px-4 py-2 rounded border mb-4" placeholder="Street address, building etc." required></textarea>
 
-        <!-- Preview Block -->
+        <!-- Shipping Method -->
+        <div class="mb-4">
+          <label class="block font-semibold mb-2">Shipping Method:</label>
+          <select id="shippingMethod" class="w-full px-4 py-2 rounded border text-black">
+            <option value="jnt">J&T Express (RM 5.20)</option>
+            <option value="pickup">Pickup Point (RM 2.50)</option>
+          </select>
+        </div>
+
+        <!-- Payment Method -->
+        <div class="mb-6">
+          <label class="block font-semibold mb-2">Payment Method:</label>
+          <select id="paymentMethod" onchange="toggleBankLogos()" class="w-full px-4 py-2 rounded border text-black">
+            <option value="cod">Cash on Delivery</option>
+            <option value="card">Credit/Debit Card</option>
+            <option value="bank">Online Banking</option>
+          </select>
+
+          <div id="banks" class="hidden mt-4">
+            <p class="mb-2 font-medium text-sm text-gray-700">Supported Banks:</p>
+            <div class="flex flex-wrap gap-4 items-center justify-start">
+              <img src="images/maybank.png" alt="Maybank" class="h-10 object-contain" />
+              <img src="images/cimb.png" alt="CIMB" class="h-10 object-contain" />
+              <img src="images/publicbank.png" alt="Public Bank" class="h-10 object-contain" />
+            </div>
+          </div>
+        </div>
+
+        <!-- Address Preview -->
         <div class="bg-gray-100 text-black p-3 rounded border mb-4 hidden" id="previewBlock">
           <h4 class="font-semibold text-red-600 mb-1">📦 Delivery Address Preview:</h4>
           <p id="addressPreview" class="whitespace-pre-line text-sm"></p>
         </div>
 
         <p class="text-sm text-gray-600 mb-2">Estimated Delivery Date: <span id="pickupDate" class="font-semibold"></span></p>
-
         <button onclick="finishOrder()" class="w-full bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">Complete Order</button>
       </div>
     </div>
@@ -85,12 +112,17 @@
     const pickup = new Date(today.setDate(today.getDate() + 2));
     document.getElementById("pickupDate").textContent = pickup.toDateString();
 
+    function toggleBankLogos() {
+      const method = document.getElementById("paymentMethod").value;
+      document.getElementById("banks").classList.toggle("hidden", method !== "bank");
+    }
+
     function confirmNumber() {
       const input = document.getElementById("phone").value.trim();
       const fullPhone = input.startsWith("0") ? "60" + input.slice(1) : "60" + input;
 
       if (!/^60[1][0-9]{8,9}$/.test(fullPhone)) {
-        return alert("Please enter a valid Malaysian phone number (11 digits total, starting with 60)");
+        return alert("Please enter a valid Malaysian phone number.");
       }
 
       document.getElementById("phonePreview").textContent = "+" + fullPhone;
@@ -116,6 +148,8 @@
       const address = document.getElementById("address").value.trim();
       const phone = localStorage.getItem("phoneNumber") || "-";
       const estimatedDate = document.getElementById("pickupDate").textContent;
+      const shipping = document.getElementById("shippingMethod").value;
+      const payment = document.getElementById("paymentMethod").value;
       const cart = JSON.parse(localStorage.getItem("cart") || "[]");
 
       if (!name || !city || !postcode || !address) {
@@ -131,6 +165,8 @@
         phone,
         address: fullAddress,
         estimatedDate,
+        shippingMethod: shipping,
+        paymentMethod: payment,
         items: cart,
         createdAt: new Date().toISOString()
       };
@@ -145,7 +181,6 @@
       }
     }
 
-    // Show preview
     ["city", "postcode", "address"].forEach(id => {
       document.getElementById(id).addEventListener("input", updatePreview);
     });
@@ -166,3 +201,4 @@
   </script>
 </body>
 </html>
+
